--- a/styles.css
+++ b/styles.css
@@ -12,16 +12,17 @@ html {
 
 body {
     display: grid;
-    grid-template-rows: 100px 1fr 0.5fr;
+    min-height: 100vh;
+    grid-template-rows: 150px 1fr 0.5fr;
     background-color: #101828;
     background-image: url("assets/tic-tac-toe.svg");
     background-repeat: repeat;
     background-size: 100px;
 }
 
-.title-container {
+.header-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 
     margin-top: 20px;
@@ -37,4 +38,35 @@ body {
     font-size: 3rem;
     color: #fb64b6;
     
+}
+
+.gameboard-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.gameboard {
+    margin-top: 20px;
+    display: grid;
+    width: 70vh;
+    height: 70vh;
+
+    gap: 15px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.grid-square {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1A1A2E;
+    border-radius: 15px;
+    box-shadow: 0 0 2px #FF4D9D;
+}
+
+.grid-square:hover {
+    box-shadow: 0 0 6px #FF4D9D;
+    background-color: #2a2a3f;
 }
